Fix nickname prefix wrapping

--- a/app/assets/stylesheets/decidim.scss
+++ b/app/assets/stylesheets/decidim.scss
@@ -217,5 +217,8 @@ a:hover, .link:hover {
   color: rgba(var(--secondary-rgb), 0.75)
 }
 
+#user_nickname {
+  margin-bottom: 0px;
+}
 
 // END MODIFICATIONS
